Added less files w/ reset, set up HTML head

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>OER Bookr</title>
+    <title>How-To: Learn Every Day</title>
+    <link href="/css/index.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Pacifico" rel="stylesheet">
   </head>
   <body>
-    <h1>Welcome!</h1>
+    <div class="container">
+      <h1>How-To!</h1>
+      <p>How-To is a website!</p>
+    </div>
   </body>
 </html>
+
