--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>How-To: Learn Every Day</title>
-    <link href="/css/index.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Pacifico" rel="stylesheet">
+    <link href="/css/index.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato|Pacifico"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
-      <h1>How-To!</h1>
-      <p>How-To is a website!</p>
+      <header class="header">
+        <nav class="navigation">
+          <div class="navigation-logo">
+            How-to
+          </div>
+          <div class="navigation-links">
+            <div class="navigation-link">Learn</div>
+            <div class="navigation-link">Discover</div>
+            <div class="navigation-link">Contribute</div>
+            <div class="navigation-link">Features</div>
+            <div class="navigation-link">Team</div>
+          </div>
+          <div class="navigation-cta">
+            <div class="navigation-cta-login">Login</div>
+            <button class="navigation-cta-signup">Sign Up</button>
+          </div>
+        </nav>
+        <div class="header-main">
+          <div class="header-description">
+            <h1>Learn.</h1>
+            <h1>Discover.</h1>
+            <h1>Contribute.</h1>
+            <p>
+              A community of high achievers and scholars that prioritize
+              learning everyday.
+            </p>
+            <button>Join Now</button>
+          </div>
+          <div class="header-image">
+            header image
+          </div>
+        </div>
+      </header>
     </div>
   </body>
 </html>
-
