--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
       href="https://fonts.googleapis.com/css?family=Lato|Pacifico"
       rel="stylesheet"
     />
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
+    <!-- Fonts End -->
   </head>
   <body>
     <div class="container">
