Added and styled body content w/ media queries

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,81 @@
           </div>
         </div>
       </header>
+      <div class="content-panel learn-content">
+        <section class="text-content">
+          <h2>Learn</h2>
+          <p>
+            Just like you can train your body to run an 8-minute mile or do a
+            perfect squat, you can train your mind to remember things more
+            efficiently. Learning new skills – especially when you share that
+            knowledge with others – helps flex your memory muscles. The simple
+            act of learning something new, and then repeating it, helps improve
+            your overall recall.
+          </p>
+          <p>
+            Just like you can train your body to run an 8-minute mile or do a
+            perfect squat, you can train your mind to remember things more
+            efficiently. Learning new skills – especially when you share that
+            knowledge with others – helps flex your memory muscles. The simple
+            act of learning something new, and then repeating it, helps improve
+            your overall recall.
+          </p>
+        </section>
+        <img
+          src="/assets/learn-image-svg-001.svg"
+          alt="A person leaning against a very large cell phone"
+        />
+      </div>
+      <div class="content-panel discover-content">
+        <section class="text-content">
+          <h2>Discover</h2>
+          <p>
+            Just like you can train your body to run an 8-minute mile or do a
+            perfect squat, you can train your mind to remember things more
+            efficiently. Learning new skills – especially when you share that
+            knowledge with others – helps flex your memory muscles. The simple
+            act of learning something new, and then repeating it, helps improve
+            your overall recall.
+          </p>
+          <p>
+            Just like you can train your body to run an 8-minute mile or do a
+            perfect squat, you can train your mind to remember things more
+            efficiently. Learning new skills – especially when you share that
+            knowledge with others – helps flex your memory muscles. The simple
+            act of learning something new, and then repeating it, helps improve
+            your overall recall.
+          </p>
+        </section>
+        <img
+          src="/assets/discover-image-001.svg"
+          alt="A person in the center ofa swirl of documents"
+        />
+      </div>
+      <div class="content-panel contribute-content">
+        <section class="text-content">
+          <h2>Contribute</h2>
+          <p>
+            Just like you can train your body to run an 8-minute mile or do a
+            perfect squat, you can train your mind to remember things more
+            efficiently. Learning new skills – especially when you share that
+            knowledge with others – helps flex your memory muscles. The simple
+            act of learning something new, and then repeating it, helps improve
+            your overall recall.
+          </p>
+          <p>
+            Just like you can train your body to run an 8-minute mile or do a
+            perfect squat, you can train your mind to remember things more
+            efficiently. Learning new skills – especially when you share that
+            knowledge with others – helps flex your memory muscles. The simple
+            act of learning something new, and then repeating it, helps improve
+            your overall recall.
+          </p>
+        </section>
+        <img
+          src="/assets/contribute-image-001.svg"
+          alt="A person pinning screenshots to a wall"
+        />
+      </div>
     </div>
   </body>
 </html>
