Added and styled mobile-responsive footer

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>How-To: Learn Every Day</title>
-    <link href="/css/index.css" rel="stylesheet" />
+    <link href="./css/index.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css?family=Lato|Pacifico"
       rel="stylesheet"
@@ -70,7 +70,7 @@
           </p>
         </section>
         <img
-          src="/assets/learn-image-svg-001.svg"
+          src="./assets/learn-image-svg-001.svg"
           alt="A person leaning against a very large cell phone"
         />
       </div>
@@ -95,7 +95,7 @@
           </p>
         </section>
         <img
-          src="/assets/discover-image-001.svg"
+          src="./assets/discover-image-001.svg"
           alt="A person in the center ofa swirl of documents"
         />
       </div>
@@ -120,10 +120,23 @@
           </p>
         </section>
         <img
-          src="/assets/contribute-image-001.svg"
+          src="./assets/contribute-image-001.svg"
           alt="A person pinning screenshots to a wall"
         />
       </div>
+      <footer>
+        <img src="./assets/footer-image-001.svg" alt="Person sitting with tablet computer in front of a flowchart" class="footer-img">
+        <nav class="footer-nav">
+          <a href="#">Learn</a>
+          <a href="#">Discover</a>
+          <a href="#">Contribute</a>
+          <a href="#">Features</a>
+          <a href="#">Team</a>
+        </nav>
+        <button class="footer-btn">
+          Join Now
+        </button>
+      </footer>
     </div>
   </body>
 </html>
