--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>How-To: Learn Every Day</title>
     <link href="./css/index.css" rel="stylesheet" />
+    <!-- Fonts -->
     <link
-      href="https://fonts.googleapis.com/css?family=Lato|Pacifico"
+      href="https://fonts.googleapis.com/css?family=Lato:300,400"
       rel="stylesheet"
     />
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     <!-- Fonts End -->
   </head>
   <body>
@@ -19,7 +18,7 @@
       <header class="header">
         <nav class="navigation">
           <div class="navigation-logo">
-            How-to
+            <img src="./assets/how-to-logo.svg" alt="How to logo"/>
           </div>
           <div class="navigation-links">
             <div class="navigation-link">Learn</div>
@@ -34,18 +33,26 @@
           </div>
         </nav>
         <div class="header-main">
-          <div class="header-description">
-            <h1>Learn.</h1>
-            <h1>Discover.</h1>
-            <h1>Contribute.</h1>
-            <p>
-              A community of high achievers and scholars that prioritize
-              learning everyday.
-            </p>
-            <button>Join Now</button>
+          <div class="header-description-container">
+            <div class="header-description">
+              <h1>
+                Learn. <br />
+                Discover. <br />
+                Contribute.
+              </h1>
+              <p>
+                A community of high achievers and scholars that prioritize
+                learning everyday.
+              </p>
+              <button>Join Now</button>
+            </div>
           </div>
           <div class="header-image">
-            header image
+            <img
+              class="header-image-img"
+              src="./assets/header-image-001.svg"
+              alt=""
+            />
           </div>
         </div>
       </header>
@@ -125,7 +132,11 @@
         />
       </div>
       <footer>
-        <img src="./assets/footer-image-001.svg" alt="Person sitting with tablet computer in front of a flowchart" class="footer-img">
+        <img
+          src="./assets/footer-image-001.svg"
+          alt="Person sitting with tablet computer in front of a flowchart"
+          class="footer-img"
+        />
         <nav class="footer-nav">
           <a href="#">Learn</a>
           <a href="#">Discover</a>
