Added (possibly temporary) favicon

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>How-To: Learn Every Day</title>
     <link href="./css/index.css" rel="stylesheet" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="./assets/favicon-how-to.JPG"/>
+    <!-- Favicon End -->
     <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato:300,400"
