Tweaked responsiveness of main content and footer

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <title>How-To: Learn Every Day</title>
     <link href="./css/index.css" rel="stylesheet" />
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="./assets/favicon-how-to.JPG"/>
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./assets/favicon-how-to.JPG"
+    />
     <!-- Favicon End -->
     <!-- Fonts -->
     <link
@@ -21,7 +25,7 @@
       <header class="header">
         <nav class="navigation">
           <div class="navigation-logo">
-            <img src="./assets/how-to-logo.svg" alt="How to logo"/>
+            <img src="./assets/how-to-logo.svg" alt="How to logo" />
           </div>
           <div class="navigation-links">
             <div class="navigation-link">Learn</div>
