--- a/public/index.html
+++ b/public/index.html
@@ -138,6 +138,42 @@
           alt="A person pinning screenshots to a wall"
         />
       </div>
+      <section class="team">
+        <div class="team-title"><h2>Meet The Team</h2></div>
+        <div class="team-cards">
+          <div class="team-card">
+            <img class="team-img" src="./assets/thomas-team-lead.jpg" alt="" />
+            <p class="team-member-name">Thomas Greenhalgh</p>
+            <p class="team-member-title">Lead Software Engineer</p>
+          </div>
+          <div class="team-card">
+            <img class="team-img" src="./assets/thomas-team-lead.jpg" alt="" />
+            <p class="team-member-name">Thomas Greenhalgh</p>
+            <p class="team-member-title">Lead Software Engineer</p>
+          </div>
+          <div class="team-card">
+            <img class="team-img" src="./assets/thomas-team-lead.jpg" alt="" />
+            <p class="team-member-name">Thomas Greenhalgh</p>
+            <p class="team-member-title">Lead Software Engineer</p>
+          </div>
+          <div class="team-card">
+            <img class="team-img" src="./assets/thomas-team-lead.jpg" alt="" />
+            <p class="team-member-name">Thomas Greenhalgh</p>
+            <p class="team-member-title">Lead Software Engineer</p>
+          </div>
+          <div class="team-card">
+            <img class="team-img" src="./assets/thomas-team-lead.jpg" alt="" />
+            <p class="team-member-name">Thomas Greenhalgh</p>
+            <p class="team-member-title">Lead Software Engineer</p>
+          </div>
+          <div class="team-card">
+            <img class="team-img" src="./assets/thomas-team-lead.jpg" alt="" />
+            <p class="team-member-name">Thomas Greenhalgh</p>
+            <p class="team-member-title">Lead Software Engineer</p>
+          </div>
+        </div>
+      </section>
+
       <footer>
         <img
           src="./assets/footer-image-001.svg"
