--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,12 @@
             <div class="navigation-link">Team</div>
           </div>
           <div class="navigation-cta">
-            <div class="navigation-cta-login">Login</div>
-            <button class="navigation-cta-signup">Sign Up</button>
+            <a href="https://howto-frontend.netlify.com/">
+              <div class="navigation-cta-login">Login</div>
+            </a>
+            <a href="https://howto-frontend.netlify.com/">
+              <button class="navigation-cta-signup">Sign Up</button>
+            </a>
           </div>
         </nav>
         <div class="header-main">
@@ -51,7 +55,9 @@
                 A community of high achievers and scholars that prioritize
                 learning everyday.
               </p>
-              <button>Join Now</button>
+              <a href="https://howto-frontend.netlify.com/">
+                <button>Join Now</button>
+              </a>
             </div>
           </div>
           <div class="header-image">
@@ -187,9 +193,11 @@
           <a href="#">Features</a>
           <a href="#">Team</a>
         </nav>
-        <button class="footer-btn">
-          Join Now
-        </button>
+        <a href="https://howto-frontend.netlify.com/">
+          <button class="footer-btn">
+            Join Now
+          </button>
+        </a>
       </footer>
     </div>
   </body>
