Added tablet queries; set responsive query margins

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
           </div>
         </div>
       </header>
-      <section class="content-panel">
+      <section class="content-panel reverse">
         <div class="content-text">
           <h2>Learn</h2>
           <p>
@@ -99,7 +99,7 @@
             your overall recall.
           </p>
         </div>
-        <div class="content-image">
+        <div class="content-image image-reverse">
           <img
             class="content-image-img"
             src="./assets/learn-image-color-001.svg"
@@ -107,7 +107,7 @@
           />
         </div>
       </section>
-      <section class="content-panel reverse">
+      <section class="content-panel">
         <div class="content-text">
           <h2>Discover</h2>
           <p>
@@ -127,7 +127,7 @@
             your overall recall.
           </p>
         </div>
-        <div class="content-image">
+        <div class="content-image image-straight">
           <img
             class="content-image-img"
             src="./assets/discover-image-color-001.svg"
@@ -135,7 +135,7 @@
           />
         </div>
       </section>
-      <section class="content-panel contribute-content">
+      <section class="content-panel reverse">
         <div class="content-text">
           <h2>Contribute</h2>
           <p>
@@ -155,7 +155,7 @@
             your overall recall.
           </p>
         </div>
-        <div class="content-image">
+        <div class="content-image image-reverse">
           <img
             class="content-image-img"
             src="./assets/contribute-image-color-001.svg"
