mobile menu css

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,10 @@
             <a href="#" class="navigation-link">Contribute</a>
             <a href="#" class="navigation-link">Features</a>
             <a href="#" class="navigation-link">Team</a>
-            <a href="#" class="navigation-hamburger-button">=</a>
+            <a href="#" class="navigation-hamburger-button">
+              <img class="open" src="./assets/hamburger-menu-icon-open.svg" alt="">
+              <!-- <img class="close" src="./assets/hamburger-menu-icon-close.svg" alt=""> -->
+            </a>
           </div>
           <div class="navigation-cta">
             <a href="https://howto-frontend.netlify.com/">
