Added hover styles and links to nav links/buttons

--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,10 @@
             </a>
           </div>
           <div class="navigation-cta">
-            <a href="https://howto-frontend.netlify.com/">
+            <a href="https://howto-frontend.netlify.com/login">
               <div class="navigation-cta-login">Login</div>
             </a>
-            <a href="https://howto-frontend.netlify.com/">
+            <a href="https://howto-frontend.netlify.com/signup">
               <button class="navigation-cta-signup">Sign Up</button>
             </a>
           </div>
@@ -72,7 +72,7 @@
                 A community of high achievers and scholars that prioritize
                 learning everyday.
               </p>
-              <a href="https://howto-frontend.netlify.com/">
+              <a href="https://howto-frontend.netlify.com/signup">
                 <button class="header-description-joinnow">Join Now</button>
               </a>
             </div>
