Added new copy; tweaked font size and spacing

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
               </h1>
               <p>
                 A community of high achievers and scholars that prioritize
-                learning everyday.
+                everyday learning.
               </p>
               <div class="header-description-button-container">
                 <a
@@ -118,20 +118,17 @@
         <div class="content-text">
           <h2>Learn</h2>
           <p>
-            Just like you can train your body to run an 8-minute mile or do a
-            perfect squat, you can train your mind to remember things more
-            efficiently. Learning new skills – especially when you share that
-            knowledge with others – helps flex your memory muscles. The simple
-            act of learning something new, and then repeating it, helps improve
-            your overall recall.
+            How-To started with a simple mission: make your life better, one
+            how-to at a time. How-To has everything you need for a healthier,
+            happier, and more productive day. Whether you’re a consumer or a
+            creator, it’s never been easier to find, create and share tips and
+            tricks with like-minded lifehackers.
           </p>
           <p>
-            Just like you can train your body to run an 8-minute mile or do a
-            perfect squat, you can train your mind to remember things more
-            efficiently. Learning new skills – especially when you share that
-            knowledge with others – helps flex your memory muscles. The simple
-            act of learning something new, and then repeating it, helps improve
-            your overall recall.
+            We know resolutions can be hard to keep, and if self-help books
+            worked they’d put themselves out of business. How-to wants you to
+            have a better life without all that pressure to live better. Just
+            practical, helpful how-tos that you can use.
           </p>
         </div>
       </section>
@@ -146,21 +143,13 @@
         <div class="content-text">
           <h2>Discover</h2>
           <p>
-            Just like you can train your body to run an 8-minute mile or do a
-            perfect squat, you can train your mind to remember things more
-            efficiently. Learning new skills – especially when you share that
-            knowledge with others – helps flex your memory muscles. The simple
-            act of learning something new, and then repeating it, helps improve
-            your overall recall.
+            From the mundane to the magical, How-To lets you browse, search and
+            filter how-tos to suit your needs. With our easy to use tools,
+            How-To will take you from IDK to DIY in no time flat. Not sure what
+            you’re looking for? Let us serve up a random how-to so you’ll always
+            leave here a little wiser than you came.
           </p>
-          <p>
-            Just like you can train your body to run an 8-minute mile or do a
-            perfect squat, you can train your mind to remember things more
-            efficiently. Learning new skills – especially when you share that
-            knowledge with others – helps flex your memory muscles. The simple
-            act of learning something new, and then repeating it, helps improve
-            your overall recall.
-          </p>
+          <p></p>
         </div>
       </section>
       <section class="content-panel" id="contribute">
@@ -174,21 +163,12 @@
         <div class="content-text">
           <h2>Contribute</h2>
           <p>
-            Just like you can train your body to run an 8-minute mile or do a
-            perfect squat, you can train your mind to remember things more
-            efficiently. Learning new skills – especially when you share that
-            knowledge with others – helps flex your memory muscles. The simple
-            act of learning something new, and then repeating it, helps improve
-            your overall recall.
+            Fancy yourself a how-to guru? How-To makes it easy to create and
+            edit your own how-tos and share them with our community of
+            passionate learners. Show off your ingenuity and help us simplify
+            life for everyone.
           </p>
-          <p>
-            Just like you can train your body to run an 8-minute mile or do a
-            perfect squat, you can train your mind to remember things more
-            efficiently. Learning new skills – especially when you share that
-            knowledge with others – helps flex your memory muscles. The simple
-            act of learning something new, and then repeating it, helps improve
-            your overall recall.
-          </p>
+          <p></p>
         </div>
       </section>
       <section class="team" id="team">
