Added GSAP script to HTML, animations not in use

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
       rel="stylesheet"
     />
     <!-- Fonts End -->
+    <!-- GSAP Script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+    <!-- GSAP Script End -->
   </head>
   <body>
     <div class="container">
@@ -48,7 +51,10 @@
         <nav class="navigation">
           <div class="navigation-logo">
             <a href="index.html">
-              <img src="./assets/how-to-logo-navigation.svg" alt="How to logo" />
+              <img
+                src="./assets/how-to-logo-navigation.svg"
+                alt="How to logo"
+              />
             </a>
           </div>
           <div class="navigation-links">
@@ -266,7 +272,7 @@
         <a href="#team">Team</a>
       </nav>
       <a href="https://howto-frontend.netlify.com/">
-        <button class="footer-btn">
+        <button class="footer-btn drop-shadow">
           Join Now
         </button>
       </a>
