footer hav links, header navlinks, footer refactor, mixins, additional variables

--- a/public/index.html
+++ b/public/index.html
@@ -258,21 +258,21 @@
         </div>
       </section>
     </div>
-    <footer>
+    <footer class="footer">
       <img
+        class="footer-img"
         src="./assets/footer-image-color-001.svg"
         alt="Person sitting with tablet computer in front of a flowchart"
-        class="footer-img"
       />
-      <nav class="footer-nav">
-        <a href="#learn">Learn</a>
-        <a href="#discover">Discover</a>
-        <a href="#contribute">Contribute</a>
-        <a href="#features">Features</a>
-        <a href="#team">Team</a>
-      </nav>
-      <a href="https://howto-frontend.netlify.com/">
-        <button class="footer-btn drop-shadow">
+      <div class="footer-navigation-links">
+        <a class="footer-navigation-link" href="#learn">Learn</a>
+        <a class="footer-navigation-link" href="#discover">Discover</a>
+        <a class="footer-navigation-link" href="#contribute">Contribute</a>
+        <a class="footer-navigation-link" href="#features">Features</a>
+        <a class="footer-navigation-link" href="#team">Team</a>
+      </div>
+      <a class="footer-button-anchor" href="https://howto-frontend.netlify.com/">
+        <button class="footer-button">
           Join Now
         </button>
       </a>
